--- a/passenger_app/android/app/src/main/AndroidManifest.xml
+++ b/passenger_app/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Camera & media permissions for image picking -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <!-- For Android 13+ -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <!-- For Android 12 and below -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
     
     <application
         android:label="passenger_app"
