--- a/passenger_app/pubspec.yaml
+++ b/passenger_app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.9
+  image_picker: ^1.0.7
   
   # Utils
   intl: ^0.19.0
